--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -17,5 +17,12 @@
     "form": {
       "submit": "Preorder"
     }
+  },
+  "cart": {
+    "button": {
+      "filled": "Your card",
+      "empty": "Your card is empty",
+      "close": "Close"
+    }
   }
 }
