finished index page styles

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -29,8 +29,8 @@
       "back": "Back to Fitra"
     },
     "button": {
-      "filled": "Your cart",
-      "empty": "Your card is empty",
+      "filled": "View cart",
+      "empty": "Cart is empty",
       "close": "Close"
     },
     "lines": {
